--- a/products.html
+++ b/products.html
@@ -39,8 +39,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
@@ -55,130 +55,49 @@
 
 <div class="col-xs-12" style="height: 125px;"></div>
 
-<div class="navbar nav">
-  <div class="tabbable"> <!-- Only required for left/right tabs -->
-    <div class="container">
-      <ul class="nav nav-tabs nav-justified">
-        <li class="active"><a href="#tftTab" data-toggle="tab">TFT</a></li>
-        <li><a href="#oledTab" data-toggle="tab">OLED</a></li>
-        <li><a href="#tpTab" data-toggle="tab">Touch Panel</a></li>
-        <li><a href="#charmonoTab" data-toggle="tab">Character Monochrome</a></li>
-        <li><a href="#graphmonoTab" data-toggle="tab">Graphic Monochrome</a></li>
-        <li><a href="#customTab" data-toggle="tab">Custom Segment</a></li>
-      </ul>
-      <div class="tab-content">
-        <div class="tab-pane active" id="tftTab">
-          <div class="row">
-            <div class="col-xs-12" style="">
-              <h2>TFT LCD</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12" style="padding-top: 5px;">
-              <p>Microtips Technology brings to you a whole new range of color TFT LCD display products, from the latest in LCD technology. A TFT LCD Display, or color LCD module is a variant of an LCD which uses thin film transistor technology to improve an image quality. Color LCD module is use in many appliances such as television, computer monitors, kindles, mobile phone, and navigation system within a airplane cockpit and much more. We have a rich inventory of color TFT LCDs products manufactured at our facilities in Taiwan and Mainland China.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="images/products/tft/2.4 TFT.JPG">
-            </div>
-            <div class="col-sm-8 col-xs-12">
-              <p>Our Color TFT LCDs are designed for ultra high crystals, with high quality, and performance. TFT LCD Module helps a person to see the contrast more clearly and precisely. The construction of a Color LCD Module or TFT LCD Module is quite extraordinary because of the circuitry layout process upon which TFT LCD Modules are made is quite similar to that of a semiconductor product. Color LCD Modules comes in many different sizes such as 2.4 inch, 2.8 inch 3.5 inch 4.3 inch 5.7 inch, 7.0 inch. Our 3.5” is our most popular one, because of the different type of application involve with this display. The interface types are CPU Mode (RGB/Digital TTL) 2.4, 2.8, 3.5, 5.7 and 7”. Our color LCD Module has a Sync Mode(RGB/Digital TTL) with data Enable mode (RGB/Digital TTL) LVDS. Most of our color TFT LCD Modules has White LED backlighting which is a energy saver in the long run. High or extended temperature TFTs available with 4-8 wire resistive and capacitive touch panel.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12">
-              <p>There is varieties type of LCD Modules such as the TFT LCD Module Touch, which is used in many LCDs display units. TFT LCD Module Touch offer an easier UI and can be used instead of traditional touch screens for switches, connectors, cable covers and heaters, LCD Module Touch: is another form of the module but without color, these are older style which contain Cathode Ray Tube monitors. STN is a characteristic of a display with no color, and possible can had touch capabilities but may rise in cost. LCD Module Touch can be use for many applications such as calculators, automotive etc.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-8 col-xs-12">
-              <p>LCD module touch are use to make life more efficient, base on a introductory finding by 3M in 2002, touch screen capabilities where advance base on a system which use sensors to detect the electric charge that accumulates in certain solid materials like for instance the glass of an LCD when there is interactions with screen. There is also a complex algorithm with these devices which analytically provide the actual location of the touch. Another prospect that associate with TFT Display Modules and color LCD Modules in general is the Driver IC controller Himax and Sitronix. These particular IC are use as the Driver controller for many displays around our world today, as Microtips Technology promote innovation and technical support we can conclude that we are here to meet any of your TFT display module needs both standard and customize.</p>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-              <img class="img-responsive" src="images/products/tft/7.0 TFT.png">
-            </div>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
-          <div class="row">
-            <h3>Learn More</h3>
-          </div>
-          <div class="row" style="min-height: 500px;">
-            <ul>
-              <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
-            </ul>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
-        </div>
-        <div class="tab-pane" id="oledTab">
-          <div class="col-xs-12" style="">
-            <h2>OLED</h2>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="images/products/oled/DLC0550AZOM-T OLED.JPG">
-            </div>
-            <div class="col-sm-8 col-xs-12">
-              <p>OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED </p>
-              <ul>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-              </ul>
-            </div>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
-          <div class="row">
-            <h3>Learn More</h3>
-          </div>
-          <div class="row" style="min-height: 500px;">
-            <ul>
-              <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
-            </ul>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
-        </div>
-        <div class="tab-pane" id="tpTab">
-          <div class="col-xs-12" style="">
-            <h2>Touch Panel</h2>
-          </div>
-          <p>Howdy, I'm in Section Touch panel.</p>
-        </div>
-        <div class="tab-pane" id="charmonoTab">
-          <div class="col-xs-12" style="">
-            <h2>Character Monochrome LCD</h2>
-          </div>
-          <p>Howdy, I'm in Section Character Monochrome.</p>
-        </div>
-        <div class="tab-pane" id="graphmonoTab">
-          <div class="col-xs-12" style="">
-            <h2>Graphic Monochrome LCD</h2>
-          </div>
-          <p>Howdy, I'm in Section Graphic Monochrome.</p>
-        </div>
-        <div class="tab-pane" id="customTab">
-          <div class="col-xs-12" style="">
-            <h2>Custom Segment Display</h2>
-          </div>
-          <p>Howdy, I'm in Section Custom Segment.</p>
-        </div>
-      </div>
+<div class="container">
+  <h1 style="text-align: center;">Products</h1>
+  <div class="blueSplitter"></div>
+  <div class="row">
+    <p style="font-size: 18px; padding: 15px;">We are a leading custom touch panel and display manufacturer and offer a wide range of products and services. Our primary business revolves around LCD displays, PMOLED displays, and our PRECI-Touch™ capacitive touch panels. We are also a licensed processor of Corning® Gorilla® Glass for cover lens applications. We integrate our display, touch and cover lens products – as well as other value-added services – to build complete solutions for our customers. Our Standard Portfolio products include pre-designed display and PRECI-Touch™ panels and are great for low-volume orders or prototyping. If you’re searching for a trusted glass screen protector manufacturer, we have a strong history of glass production and offer a wide range of customization capabilities including packaging, screen printing, a variety of premium coatings, films and substrates, and much more.<br><br>
+
+    Click on the links below to learn more about our products and capabilities.</p>
+    <div class="row">
+      <a href="allProducts.html#tftTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/TFT.png" height="200px">
+        <h3>TFT</h3>
+        <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
+      </a>
+      <a href="allProducts.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/OLED.jpg" height="200px">
+        <h3>OLED</h3>
+        <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
+      </a>
+      <a href="allProducts.html#tpTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/TP.jpg" height="200px">
+        <h3>Touch Panel</h3>
+        <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
+      </a>
+    </div>
+    <div class="row">
+      <a href="allProducts.html#charmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/CharacterMonochrome.jpg" height="200px">
+        <h3>Character Monochrome</h3>
+        <p>A Character Monochrome LCD is a simple, easy to read and use display solution. Although not as popular as before, we still provide fully custom character displays.</p>
+      </a>
+      <a href="allProducts.html#graphmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/GraphicMonochrome.jpg" height="200px">
+        <h3>Graphic Monochrome</h3>
+        <p>A Graphic Monochrome LCD can add a lot of customization to your product over a character display. We provide any size, resolution, and color.</p>
+      </a>
+      <a href="allProducts.html#customTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/index/CustomSegment.jpg" height="200px">
+        <h3>Custom Segment</h3>
+        <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
+      </a>
     </div>
   </div>
+  <div class="blueSplitter"></div>
 </div>
 
 <div class="subsection">
