--- a/allProducts.html
+++ b/allProducts.html
@@ -5,6 +5,11 @@
   <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    var shiftWindow = function() { scrollBy(0, -500) };
+    window.addEventListener("hashchange", shiftWindow);
+    function load() { if (window.location.hash) shiftWindow(); }
+  </script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,7 +18,7 @@
   <link rel="stylesheet" href="Jstylesheet.css">
 </head>
 
-<body link="black">
+<body link="black" onload="load()">
 
 <div class="example3">
   <nav class="navbar navbar-default navbar-fixed-top" style="background-color: white;">
@@ -34,8 +39,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
@@ -53,7 +58,7 @@
 <div class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs nav-justified">
         <li class="active"><a href="#tftTab" data-toggle="tab">TFT</a></li>
         <li><a href="#oledTab" data-toggle="tab">OLED</a></li>
         <li><a href="#tpTab" data-toggle="tab">Touch Panel</a></li>
@@ -218,7 +223,7 @@
     <div class="modal-content">
       <div class="modal-header" style="padding:35px 50px;">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4><span class="glyphicon glyphicon-lock"></span> Contact Us!</h4>
+        <h4> Contact Us!</h4>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
         <form role="form">
@@ -277,6 +282,19 @@ function initMap() {
     map: map
   });
 }
+</script>
+
+<script>
+  // Javascript to enable link to tab
+  var url = document.location.toString();
+  if (url.match('#')) {
+    $('.nav-tabs a[href="#' + url.split('#')[1] + '"]').tab('show');
+  } 
+
+  // Change hash for page-reload
+  $('.nav-tabs a').on('shown.bs.tab', function (e) {
+    window.location.hash = e.target.hash;
+  })
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
