--- a/distreps.html
+++ b/distreps.html
@@ -34,8 +34,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
