--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
@@ -66,34 +66,34 @@
   <div class="container">
     <div class="row">
       <h1 style="padding-top: 20px;">Products</h1>
-      <a href="products.html#tftTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#tftTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/TFT.png" height="200px">
         <h3>TFT</h3>
         <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
       </a>
-      <a href="products.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/OLED.jpg" height="200px">
         <h3>OLED</h3>
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
-      <a href="products.html#tpTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#tpTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/TP.jpg" height="200px">
         <h3>Touch Panel</h3>
         <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
     </div>
     <div class="row">
-      <a href="products.html#charmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#charmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/CharacterMonochrome.jpg" height="200px">
         <h3>Character Monochrome</h3>
         <p>A Character Monochrome LCD is a simple, easy to read and use display solution. Although not as popular as before, we still provide fully custom character displays.</p>
       </a>
-      <a href="products.html#graphmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#graphmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/GraphicMonochrome.jpg" height="200px">
         <h3>Graphic Monochrome</h3>
         <p>A Graphic Monochrome LCD can add a lot of customization to your product over a character display. We provide any size, resolution, and color.</p>
       </a>
-      <a href="products.html#customTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#customTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/index/CustomSegment.jpg" height="200px">
         <h3>Custom Segment</h3>
         <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
@@ -145,12 +145,14 @@
       	<h1 style="text-align: center;">News</h1>
       </a>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
-        <img class="img-responsive" src="images/index/TFT.png" width=500px>
+        <img class="img-responsive" src="images/news/20170720/549 AMOLED Display Module.png" width="100%">
       </div>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
-        <h3>New Screen</h3>
-        <p>This is a paragraph about a new screen. Click below to learn more!</p>
-        <button type="button" class="btn btn-primary">Learn More!</button>
+        <h3>5.49" AMOLED Display Module</h3>
+        <p>Microtips MTD0550AZOM-T is a 5.49 inch display module with a resolution of 1080(RGB) x 1920. This display is composed of an AMOLED panel, driver ICs, On-cell Touch Panel and FPC.</p>
+        <a href="articles/549_AMOLED_Display_Module.html">
+          <button type="button" class="btn btn-primary">Learn More!</button>
+        </a>
       </div>
     </div>
   </div>
