--- a/industries.html
+++ b/industries.html
@@ -5,16 +5,23 @@
   <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script>
-    var shiftWindow = function() { scrollBy(0, -500) };
-    window.addEventListener("hashchange", shiftWindow);
-    function load() { if (window.location.hash) shiftWindow(); }
-  </script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script>
+    if ( $(window).width() > 767) {      
+      var shiftWindow = function() { scrollBy(0, -200) };
+      window.addEventListener("hashchange", shiftWindow);
+      function load() { if (window.location.hash) shiftWindow(); }
+    } 
+    else {
+      var shiftWindow = function() { scrollBy(0, -650) };
+      window.addEventListener("hashchange", shiftWindow);
+      function load() { if (window.location.hash) shiftWindow(); }
+    }
+  </script>
   <link rel="stylesheet" href="Jstylesheet.css">
 </head>
 
@@ -39,8 +46,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
@@ -55,16 +62,26 @@
 
 <div class="col-xs-12" style="height: 125px;"></div>
 
+<div class="container">
+  <h1 style="text-align: center;">Industries</h1>
+  <div class="blueSplitter"></div>
+  <div class="row">
+    <p style="font-size: 18px; padding: 15px;">Our expert team of design engineers develops innovative, high-performance solutions for a variety of unique environments encountered in the automotive, medical, industrial, and consumer markets. This includes capacitive touch panels with glove/stylus support and water immunity, as well as other ruggedized, robust, shock and vibration resistant products designed to excel in harsh conditions. Our products for automotive applications are designed with industry certified controllers and are especially suited for demanding environments. We also design LCD displays and OLED displays with quick design cycles and an emphasis on low production cost for a number of other applications.<br><br>
+
+    Check out the links below to learn about our capabilities in your particular market.</p>
+  </div>
+</div>
+
 <div class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
-        <li class="active"><a href="#automotiveTab" data-toggle="tab">Automotive</a></li>
-        <li><a href="#industrialTab" data-toggle="tab">Industrial</a></li>
-        <li><a href="#medicalTab" data-toggle="tab">Medical</a></li>
-        <li><a href="#consumerTab" data-toggle="tab">Consumer</a></li>
-        <li><a href="#hvacTab" data-toggle="tab">HVAC</a></li>
-        <li><a href="#telecomTab" data-toggle="tab">Telecom</a></li>
+        <li><a href="#automotiveTab" data-toggle="tab"><i class="fa fa-car industryLinks" style="font-size: 40px;"></i><br>Automotive</a></li>
+        <li><a href="#industrialTab" data-toggle="tab"><i class="fa fa-industry industryLinks" style="font-size: 40px;"></i><br>Industrial</a></li>
+        <li><a href="#medicalTab" data-toggle="tab"><i class="fa fa-heartbeat industryLinks" style="font-size: 40px;"></i><br>Medical</a></li>
+        <li><a href="#consumerTab" data-toggle="tab"><i class="fa fa-desktop industryLinks" style="font-size: 40px;"></i><br>Consumer</a></li>
+        <li><a href="#hvacTab" data-toggle="tab"><i class="fa fa-thermometer-half industryLinks" style="font-size: 40px;"></i><br>HVAC</a></li>
+        <li><a href="#telecomTab" data-toggle="tab"><i class="fa fa-phone industryLinks" style="font-size: 40px;"></i><br>Telecom</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="automotiveTab">
