--- a/news.html
+++ b/news.html
@@ -34,8 +34,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="index.html#productSection">Products</a></li> 
-            <li><a href="index.html#industrySection">Industries</a></li> 
+            <li><a href="products.html">Products</a></li> 
+            <li><a href="industries.html">Industries</a></li> 
             <li><a href="news.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
@@ -52,16 +52,20 @@
 
 <div class="col-xs-12" style="height: 50px;"></div>
 
-<div class="container">
+<div class="container news">
   <div class="col-md-9 col-sm-8 col-xs-12">
 
     <div class="row">
       <div class="col-sm-4 col-xs-12">
-        <img class="img-responsive" src="images/products/tft/2.4 TFT.JPG">
+        <img class="img-responsive" src="images/news/20170720/549 AMOLED Display Module.png">
       </div>
       <div class="col-sm-8 col-xs-12">
-        <h2>New Screen</h2>
-        <p>This is a paragraph about a new screen. Click below to NOT learn more!</p>
+        <h2 class="news">5.49" AMOLED Display Module</h2>
+        <p style="font-style: italic;">July 20, 2017</p>
+        <p>Microtips MTD0550AZOM-T is a 5.49 inch display module with a resolution of 1080(RGB) x 1920. This display is composed of an AMOLED panel, driver ICs, On-cell Touch Panel and FPC.</p>
+        <a href="articles/549_AMOLED_Display_Module.html">
+          <button type="button" class="btn btn-primary">Read More!</button>
+        </a>
       </div>
     </div>
     
