changed industries page to not have an active tab by default. Might need to work on spacing later. Maybe see if we can throw a dummy image in there to make it look nice.

--- a/industries.html
+++ b/industries.html
@@ -66,13 +66,13 @@
   <h1 style="text-align: center;">Industries</h1>
   <div class="blueSplitter"></div>
   <div class="row">
-    <p style="font-size: 18px; padding: 15px;">Our expert team of design engineers develops innovative, high-performance solutions for a variety of unique environments encountered in the automotive, medical, industrial, and consumer markets. This includes capacitive touch panels with glove/stylus support and water immunity, as well as other ruggedized, robust, shock and vibration resistant products designed to excel in harsh conditions. Our products for automotive applications are designed with industry certified controllers and are especially suited for demanding environments. We also design LCD displays and OLED displays with quick design cycles and an emphasis on low production cost for a number of other applications.<br><br>
+    <p style="font-size: 18px; padding: 15px; line-height: 35px;">Our expert team of design engineers develops innovative, high-performance solutions for a variety of unique environments encountered in the automotive, medical, industrial, and consumer markets. This includes capacitive touch panels with glove/stylus support and water immunity, as well as other ruggedized, robust, shock and vibration resistant products designed to excel in harsh conditions. Our products for automotive applications are designed with industry certified controllers and are especially suited for demanding environments. We also design LCD displays and OLED displays with quick design cycles and an emphasis on low production cost for a number of other applications.<br><br>
 
     Check out the links below to learn about our capabilities in your particular market.</p>
   </div>
 </div>
 
-<div class="navbar nav">
+<div class="navbar nav" style="padding: 90px 0px;">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
@@ -84,7 +84,7 @@
         <li><a href="#telecomTab" data-toggle="tab"><i class="fa fa-phone industryLinks" style="font-size: 40px;"></i><br>Telecom</a></li>
       </ul>
       <div class="tab-content">
-        <div class="tab-pane active" id="automotiveTab">
+        <div class="tab-pane" id="automotiveTab">
           <div class="row">
             <div class="col-xs-12" style="">
               <h2>Automotive LCD</h2>
