delete background on a couple images and changed button color for news stories

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
       </a>
       <a href="allProducts.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/index/OLED.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/OLED.png" height="200px">
         <h3>OLED</h3>
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
@@ -151,7 +151,7 @@
         <h3>5.49" AMOLED Display Module</h3>
         <p>Microtips MTD0550AZOM-T is a 5.49 inch display module with a resolution of 1080(RGB) x 1920. This display is composed of an AMOLED panel, driver ICs, On-cell Touch Panel and FPC.</p>
         <a href="articles/549_AMOLED_Display_Module.html">
-          <button type="button" class="btn btn-primary">Learn More!</button>
+          <button type="button" class="btn btn-info">Learn More!</button>
         </a>
       </div>
     </div>
