--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
         <p style="font-style: italic;">July 20, 2017</p>
         <p>Microtips MTD0550AZOM-T is a 5.49 inch display module with a resolution of 1080(RGB) x 1920. This display is composed of an AMOLED panel, driver ICs, On-cell Touch Panel and FPC.</p>
         <a href="articles/549_AMOLED_Display_Module.html">
-          <button type="button" class="btn btn-primary">Read More!</button>
+          <button type="button" class="btn btn-info">Read More!</button>
         </a>
       </div>
     </div>
