changes to NEWS section. moved news homepage and made it more cohesive to navitgate around with a back button that takes user to section they were on.

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="products.html">Products</a></li> 
             <li><a href="industries.html">Industries</a></li> 
-            <li><a href="news.html">News</a></li>
+            <li><a href="news/page-1.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
