--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="products.html">Products</a></li> 
             <li><a href="industries.html">Industries</a></li> 
-            <li><a href="news.html">News</a></li>
+            <li><a href="news/page-1.html">News</a></li>
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
@@ -141,7 +141,7 @@
 <div class="section homeSectionThree">
   <div class="container">
     <div class="row">
-      <a href="news.html" class="newsLink">
+      <a href="news/page-1.html" class="newsLink">
       	<h1 style="text-align: center;">News</h1>
       </a>
       <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
