Transferred over news stories and modified about page

--- a/about.html
+++ b/about.html
@@ -70,40 +70,59 @@
   <h1>Meet the Team</h1>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\RA.jpg">
+      <h2>Reza "Arif Arfin"</h2>
+      <h5>Executive Vice President, North American Operations</h5>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\NR.jpg">
+      <h2>Nadim Rahman</h2>
+      <h5>Engineering Manager, FAE and Sales</h5>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GV.jpg">
+      <h2>George Van Driessche</h2>
+      <h5>Senior Regional Sales Manager - North America, East</h5>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
       <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
       <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <h5>Regional Sales Manager - North America, West</h5>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GM.jpg">
+      <h2>Grace-Ann Munroe</h2>
+      <h5>Inside Sales Manager</h5>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\SH.jpg">
+      <h2>Susan Hitchcock</h2>
+      <h5>Administrative & Customer Services Manager</h5>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\MR.png">
+      <h2>Marzana Rashid</h2>
+      <h5>Assistant Quality Logistics Manager</h5>
     </div>
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
-      <h5>Sales Manager</h5>
-      <h5>North America - West</h5>
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\DC.png">
+      <h2>Danny Clark</h2>
+      <h5>Logistics Manager</h5>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JR.png">
+      <h2>Jordan Ruhl</h2>
+      <h5>Field Application Engineer</h5>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\SB.jpg">
+      <h2>Sultan Bashar</h2>
+      <h5>ODM/OEM Project Manager</h5>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
+      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\DK.jpg">
+      <h2>David Khonsary</h2>
+      <h5>Assistant Accountant</h5>
     </div>
   </div>
 </div>
