New image overlay in about/MeetTeam section and changed how the blocks look. Also added music to the index page as joke for DK

--- a/about.html
+++ b/about.html
@@ -69,60 +69,135 @@
 <div class="container">
   <h1>Meet the Team</h1>
   <div class="row">
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\RA.jpg">
-      <h2>Reza "Arif Arfin"</h2>
-      <h5>Executive Vice President, North American Operations</h5>
+    <div class="col-sm-6 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:arif@microtipsusa.com">arif@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x101</p>
+          Cell: (407) 758-1095
+        </div>
+      </div>
+      <h2>Reza "Arif" Arfin</h2>
+      <h5>General Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\NR.jpg">
+    <div class="col-sm-6 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x103</p>
+          Direct: (866) 239-3171
+        </div>
+      </div>
       <h2>Nadim Rahman</h2>
-      <h5>Engineering Manager, FAE and Sales</h5>
+      <h5>Chief Technical Officer</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GV.jpg">
-      <h2>George Van Driessche</h2>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x102</p>
+          Cell: (407) 325-5096
+        </div>
+      </div>
+      <h3>George Van Driessche</h3>
       <h5>Senior Regional Sales Manager - North America, East</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JB.jpg">
-      <h2>Jordan Baker</h2>
+    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x105</p>
+          Cell: (937) 654-0576
+        </div>
+      </div>
+      <h3>Jordan Baker</h3>
       <h5>Regional Sales Manager - North America, West</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\GM.jpg">
+    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:jruhl@microtipsusa.com">jruhl@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x104
+        </div>
+      </div>
+      <h3>Jordan Ruhl</h3>
+      <h5>Field Application Engineer</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x108
+        </div>
+      </div>
       <h2>Grace-Ann Munroe</h2>
       <h5>Inside Sales Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\SH.jpg">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:admin@microtipsusa.com">admin@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x100
+        </div>
+      </div>
       <h2>Susan Hitchcock</h2>
       <h5>Administrative & Customer Services Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\MR.png">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\MR.png">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:marzana@microtipsusa.com">marzana@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x109
+        </div>
+      </div>
       <h2>Marzana Rashid</h2>
       <h5>Assistant Quality Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\DC.png">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DC.png">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:danny@microtipsusa.com">danny@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x107
+        </div>
+      </div>
       <h2>Danny Clark</h2>
       <h5>Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\JR.png">
-      <h2>Jordan Ruhl</h2>
-      <h5>Field Application Engineer</h5>
-    </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\SB.jpg">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x103</p>
+          Cell: (919) 412-0982
+        </div>
+      </div>
       <h2>Sultan Bashar</h2>
       <h5>ODM/OEM Project Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam">
-      <img class="img-responsive" style="padding-top: 15px;" src="images\about\team\DK.jpg">
+    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:david@microtipsusa.com">david@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x110
+        </div>
+      </div>
       <h2>David Khonsary</h2>
-      <h5>Assistant Accountant</h5>
+      <h5>"I don't know what I am" - DK</h5>
     </div>
   </div>
 </div>
