--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
   <div class="container">
      © Copyright - Microtips Technology USA
   </div>
+  <audio controls autoplay>
+    <source src="bensound-thelounge.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </div>
 
     <!-- Modal -->
