--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
 <div class="container">
   <h1>Meet the Team</h1>
   <div class="row">
+    <div class="col-sm-3 col-xs-12"></div>
     <div class="col-sm-6 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.jpg">
       <div class="middle">
@@ -81,18 +82,7 @@
       <h2>Reza "Arif" Arfin</h2>
       <h5>General Manager</h5>
     </div>
-    <div class="col-sm-6 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.jpg">
-      <div class="middle">
-        <div class="text">
-          <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
-          <p>Phone: (407) 273-0204 x103</p>
-          Direct: (866) 239-3171
-        </div>
-      </div>
-      <h2>Nadim Rahman</h2>
-      <h5>Chief Technical Officer</h5>
-    </div>
+    <div class="col-sm-3 col-xs-12"></div>
   </div>
   <div class="row">
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
@@ -120,19 +110,6 @@
       <h5>Regional Sales Manager - North America, West</h5>
     </div>
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
-      <div class="middle">
-        <div class="text">
-          <p>E-mail: <a href="mailto:jruhl@microtipsusa.com">jruhl@microtipsusa.com</a></p>
-          Phone: (407) 273-0204 x104
-        </div>
-      </div>
-      <h3>Jordan Ruhl</h3>
-      <h5>Field Application Engineer</h5>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.jpg">
       <div class="middle">
         <div class="text">
@@ -143,6 +120,35 @@
       <h2>Grace-Ann Munroe</h2>
       <h5>Inside Sales Manager</h5>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2 col-xs-12"></div>
+    <div class="col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.jpg">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x103</p>
+          Direct: (866) 239-3171
+        </div>
+      </div>
+      <h2>Nadim Rahman</h2>
+      <h5>Chief Technical Officer</h5>
+    </div>
+    <div class="col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
+      <div class="middle">
+        <div class="text">
+          <p>E-mail: <a href="mailto:jruhl@microtipsusa.com">jruhl@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x104
+        </div>
+      </div>
+      <h3>Jordan Ruhl</h3>
+      <h5>Field Application Engineer</h5>
+    </div>
+    <div class="col-sm-2 col-xs-12"></div>
+  </div>
+  <div class="row">
     <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.jpg">
       <div class="middle">
