Mostly work on distreps page.

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <h2>Reza "Arif" Arfin</h2>
-      <h5>General Manager</h5>
+      <h5>Executive Vice President, North American Operations</h5>
     </div>
     <div class="col-sm-3 col-xs-12"></div>
   </div>
@@ -149,60 +149,60 @@
     <div class="col-sm-2 col-xs-12"></div>
   </div>
   <div class="row">
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.jpg">
       <div class="middle">
         <div class="text">
-          <p>E-mail: <a href="mailto:admin@microtipsusa.com">admin@microtipsusa.com</a></p>
+          <p>E-mail: <a href="mailto:admin@microtipsusa.com">admin<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x100
         </div>
       </div>
-      <h2>Susan Hitchcock</h2>
+      <h3>Susan Hitchcock</h3>
       <h5>Administrative & Customer Services Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\MR.png">
       <div class="middle">
         <div class="text">
-          <p>E-mail: <a href="mailto:marzana@microtipsusa.com">marzana@microtipsusa.com</a></p>
+          <p>E-mail: <a href="mailto:marzana@microtipsusa.com">marzana<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x109
         </div>
       </div>
-      <h2>Marzana Rashid</h2>
+      <h3>Marzana Rashid</h3>
       <h5>Assistant Quality Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DC.png">
       <div class="middle">
         <div class="text">
-          <p>E-mail: <a href="mailto:danny@microtipsusa.com">danny@microtipsusa.com</a></p>
+          <p>E-mail: <a href="mailto:danny@microtipsusa.com">danny<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x107
         </div>
       </div>
-      <h2>Danny Clark</h2>
+      <h3>Danny Clark</h3>
       <h5>Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.jpg">
       <div class="middle">
         <div class="text">
-          <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan@microtipsusa.com</a></p>
+          <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan<br>@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x103</p>
           Cell: (919) 412-0982
         </div>
       </div>
-      <h2>Sultan Bashar</h2>
+      <h3>Sultan Bashar</h3>
       <h5>ODM/OEM Project Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-6 meetTeam2">
+    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.jpg">
       <div class="middle">
         <div class="text">
-          <p>E-mail: <a href="mailto:david@microtipsusa.com">david@microtipsusa.com</a></p>
+          <p>E-mail: <a href="mailto:david@microtipsusa.com">david<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x110
         </div>
       </div>
-      <h2>David Khonsary</h2>
+      <h3>David Khonsary</h3>
       <h5>"I don't know what I am" - DK</h5>
     </div>
   </div>
