--- a/distreps.html
+++ b/distreps.html
@@ -11,6 +11,40 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="Jstylesheet.css">
+
+  <script type="text/javascript">
+    function showHideCountry(country) {
+
+      if(country == "NoSelect"){
+        $(document.getElementById("stateSelector")).slideUp("slow");
+        $(document.getElementById("provinceSelector")).slideUp("slow");
+        $("#rep").show();
+      }
+      if(country == "USA"){
+        $(document.getElementById("stateSelector")).slideDown("slow");
+        $(document.getElementById("provinceSelector")).slideUp("slow");
+        $("#rep").show();
+        $("#rep").not(".USAreps").hide();
+      }
+      if(country == "CAN"){
+        $(document.getElementById("stateSelector")).slideUp("slow");
+        $(document.getElementById("provinceSelector")).slideDown("slow");
+        $("#rep").show();
+        $("#rep").not(".CANreps").hide();
+      }
+      if(country == "MEX"){
+        $(document.getElementById("stateSelector")).slideUp("slow");
+        $(document.getElementById("provinceSelector")).slideUp("slow");
+        $("#rep").show();
+      }
+      if(country == "OTH"){
+        $(document.getElementById("stateSelector")).slideUp("slow");
+        $(document.getElementById("provinceSelector")).slideUp("slow");
+        $("#rep").show();
+      }
+    }
+  </script>
+
 </head>
 
 <body link="black">
@@ -54,62 +88,362 @@
   <div class="container">
     <h1>Distributors</h1>
     <div class="blueSplitter"></div>
-    <div class="row" style="padding-top: 25px;">
-      <div class="col-xs-12 col-sm-4" style="padding: 15px;">
-        <a href="http://www.mouser.com/microtips/">
-          <img class="img-responsive" src="images\distreps\mouser.png">
-        </a>
-      </div>
-      <div class="col-xs-12 col-sm-4" style="padding: 15px;">
-        <a href="http://www.avnet.co.za/manufacturer-microtips-technology.html">
-          <img class="img-responsive" src="images\distreps\avnet.svg">
-        </a>
-      </div>
-      <div class="col-xs-12 col-sm-4" style="padding: 15px;">
-        <a href="http://www.worldmicro.com/">
-          <img class="img-responsive" src="images\distreps\worldMicro.png">
-        </a>
-      </div>
-    </div>
+
+    <table>
+      <tr>
+        <th>
+          <a href="http://www.mouser.com/microtips/">
+            <img class="img-responsive" src="images\distreps\mouser.png">
+          </a>
+        </th>
+        <td>The partnership between Microtips USA and Mouser has been around since 2010 and allows small scale projects and tinkerers to experience large scale quality. Mouser carries large stock of our most popular products as well as new and innovative products. Give their website a visit and see the large array of Microtips products that can be purchased and delivered anywhere in the world.</td>
+      </tr>
+      <tr>
+        <th>
+          <a href="http://www.avnet.co.za/manufacturer-microtips-technology.html">
+            <img class="img-responsive" src="images\distreps\avnet.svg">
+          </a>
+        </th>
+        <td>Avnet can design, make, supply, and deliver for customers of every size in every corner of the world – whether your product is still a notion on a napkin, in mass production, or at any point in between. Our partnership with them allows us to provide world class products to all their customers, whether they are big or small, and get a working product out into the world.</td>
+      </tr>
+      <tr>
+        <th>
+          <a href="http://www.worldmicro.com/brand/microtips/">
+            <img class="img-responsive" src="images\distreps\worldMicro.png">
+          </a>
+        </th>
+        <td>World Micro is a company that might be selling Microtips products.</td>
+      </tr>
+    </table>
 
     <h1>Representatives</h1>
     <div class="blueSplitter"></div>
-    <div class="row" style="padding-top: 25px;">
-      <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-8">
+      <div class="row">
         <h3>United States</h3>
         <div class="blueSplitter"></div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">Alabama</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">Alaska</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">Arizona</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">Arkansas</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">California</p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 otherFive">
           <p class="reps">Colorado</p>
         </div>
-
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Conneticut</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Delaware</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Florida</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Georgia</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Hawaii</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Idaho</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Illinois</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Indiana</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Iowa</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Kansas</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Kentuky</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Louisiana</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Maine</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Maryland</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Massachusetts</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Michigan</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Minnesota</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Mississippi</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Missouri</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Montana</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Nebraska</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Nevada</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">New Hampshire</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">New Jersey</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">New Mexico</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">New York</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">North Carolina</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">North Dakota</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Ohio</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Oklahoma</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Oregon</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Pennsylvania</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Rhode Island</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">South Carolina</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">South Dakota</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Tennessee</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Texas</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Utah</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Vermont</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Virginia</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Washington</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">West Virginia</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Wisconsin</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Wyoming</p>
+        </div>
+      </div>
+      <div class="row">
         <h3>Canada</h3>
         <div class="blueSplitter"></div>
-        
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Alberta</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">British Columbia</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Manitoba</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">New Brunswick</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Newfoundland and Labrador</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Northwest Territories</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Nova Scotia</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Nunavut</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Ontario</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Prince Edward Island</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Quebec</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Saskatchewan</p>
+        </div>
+        <div class="col-xs-3 otherFive">
+          <p class="reps">Yukon</p>
+        </div>
+      </div>
+      <div class="row">
         <h3>Mexico</h3>
         <div class="blueSplitter"></div>
       </div>
+    </div>
+  </div>
+  <div class="row" style="height: 50px;"></div>
+  <div class="blueSplitter"></div>
+  <div class="container">
+    <h1>Representatives</h1>
+    <div class="blueSplitter"></div>
+    <div class="col-sm-4">
+      <h3>Filter</h3>
+      <div id="countrySelector">
+        <h4>Country</h4>
+        <select style="width: 100%;" onchange="showHideCountry(this.value)">
+          <option value="NoSelect">Please Select Country</option>
+          <option value="USA">United States</option>
+          <option value="CAN">Canada</option>
+          <option value="MEX">Mexico</option>
+          <option value="OTH">Other</option>
+        </select>
+      </div>
+      <div id="stateSelector">
+      <h4>State</h4>
+      <select style="width: 100%;">
+        <option value="NoSelect">Please Select State</option>
+        <option value="AL">Alabama</option>
+        <option value="AK">Alaska</option>
+        <option value="AZ">Arizona</option>
+        <option value="AR">Arkansas</option>
+        <option value="CA">California</option>
+        <option value="CO">Colorado</option>
+        <option value="CT">Connecticut</option>
+        <option value="DE">Delaware</option>
+        <option value="DC">District Of Columbia</option>
+        <option value="FL">Florida</option>
+        <option value="GA">Georgia</option>
+        <option value="HI">Hawaii</option>
+        <option value="ID">Idaho</option>
+        <option value="IL">Illinois</option>
+        <option value="IN">Indiana</option>
+        <option value="IA">Iowa</option>
+        <option value="KS">Kansas</option>
+        <option value="KY">Kentucky</option>
+        <option value="LA">Louisiana</option>
+        <option value="ME">Maine</option>
+        <option value="MD">Maryland</option>
+        <option value="MA">Massachusetts</option>
+        <option value="MI">Michigan</option>
+        <option value="MN">Minnesota</option>
+        <option value="MS">Mississippi</option>
+        <option value="MO">Missouri</option>
+        <option value="MT">Montana</option>
+        <option value="NE">Nebraska</option>
+        <option value="NV">Nevada</option>
+        <option value="NH">New Hampshire</option>
+        <option value="NJ">New Jersey</option>
+        <option value="NM">New Mexico</option>
+        <option value="NY">New York</option>
+        <option value="NC">North Carolina</option>
+        <option value="ND">North Dakota</option>
+        <option value="OH">Ohio</option>
+        <option value="OK">Oklahoma</option>
+        <option value="OR">Oregon</option>
+        <option value="PA">Pennsylvania</option>
+        <option value="RI">Rhode Island</option>
+        <option value="SC">South Carolina</option>
+        <option value="SD">South Dakota</option>
+        <option value="TN">Tennessee</option>
+        <option value="TX">Texas</option>
+        <option value="UT">Utah</option>
+        <option value="VT">Vermont</option>
+        <option value="VA">Virginia</option>
+        <option value="WA">Washington</option>
+        <option value="WV">West Virginia</option>
+        <option value="WI">Wisconsin</option>
+        <option value="WY">Wyoming</option>
+      </select>
+      </div>
+      <div id="provinceSelector">
+        <h4>Province</h4>
+        <select style="width: 100%;">
+          <option value="NoSelect">Please Select Province</option>
+          <option value="AB">Alberta</option>
+          <option value="BC">British Columbia</option>
+          <option value="MB">Manitoba</option>
+          <option value="NB">New Brunswick</option>
+          <option value="NL">Newfoundland and Labrador</option>
+          <option value="NS">Nova Scotia</option>
+          <option value="NT">Northwest Territories</option>
+          <option value="NU">Nunavut</option>
+          <option value="ON">Ontario</option>
+          <option value="PE">Prince Edward Island</option>
+          <option value="QC">Quebec</option>
+          <option value="SK">Saskatchewan</option>
+          <option value="YT">Yukon Territory</option>
+        </select>
+      </div>
+    </div>
+    <div class="col-sm-8">
+      <ul>
+        <div id="rep" class="USAreps" style="padding-top: 10px;">
+          <p>
+            <strong>Microtips Technology (Non Represented)</strong><br>George Van Driessche<br>Senior Regional Sales Manager (East)<br>3504 Lake Lynda Dr, Ste #110 <br>Orlando, Fl  32817<br>Phone: 407-273-0204 ext. # 102<br>Fax: 407-273-0771<br>Email: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a>
+          </p>
+          <div class="blueSplitter"></div>
+        </div>
+        <div id="rep" class="CANreps" style="padding-top: 10px;">
+          <p>
+            <strong>Microtips Technology (Non Represented)</strong><br>Jordan Baker<br>Regional Sales Manager (West)<br>3504 Lake Lynda Dr, Ste #110 <br>Orlando, Fl  32817<br>Phone: 407-273-0204 ext. # 105<br>Fax: 407-273-0771<br>Email: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a>
+          </p>
+          <div class="blueSplitter"></div>
+        </div>
+        <div id="rep" class="CANreps USAreps" style="padding-top: 10px;">
+          <p>
+            <strong>Microtips Technology (Non Represented)</strong><br>Reza Arif Arfin<br>General Manager<br>3504 Lake Lynda Dr, Ste #110 <br>Orlando, Fl  32817<br>Phone: 407-273-0204 ext. # 105<br>Fax: 407-273-0771<br>Email: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a>
+          </p>
+          <div class="blueSplitter"></div>
+        </div>
+      </ul>
     </div>
   </div>
 </div>
 
 <div id="content-mobile">
   <div class="container">
-    <h1 style="padding-top: 300px;">Coming soon!</h1>
+    <h1 style="padding-top: 300px; text-align: center;">Coming soon!</h1>
   </div>
 </div>
 
@@ -155,7 +489,7 @@
     <div class="modal-content">
       <div class="modal-header" style="padding:35px 50px;">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4><span class="glyphicon glyphicon-lock"></span> Contact Us!</h4>
+        <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
         <form role="form">
