--- a/products.html
+++ b/products.html
@@ -76,7 +76,7 @@
         <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
       </a>
       <a href="allProducts.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/index/OLED.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/OLED.png" height="200px">
         <h3>OLED</h3>
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
