got a good basis for JS on the distreps page. Made a mobile version too. Will add data in the coming days

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <div class="col-sm-6 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:arif@microtipsusa.com">arif@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x101</p>
           Cell: (407) 758-1095
@@ -88,7 +88,7 @@
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x102</p>
           Cell: (407) 325-5096
@@ -100,7 +100,7 @@
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x105</p>
           Cell: (937) 654-0576
@@ -112,7 +112,7 @@
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x108
         </div>
@@ -126,7 +126,7 @@
     <div class="col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x103</p>
           Direct: (866) 239-3171
@@ -138,7 +138,7 @@
     <div class="col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:jruhl@microtipsusa.com">jruhl@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x104
         </div>
@@ -152,7 +152,7 @@
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:admin@microtipsusa.com">admin<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x100
         </div>
@@ -163,7 +163,7 @@
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\MR.png">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:marzana@microtipsusa.com">marzana<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x109
         </div>
@@ -174,7 +174,7 @@
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DC.png">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:danny@microtipsusa.com">danny<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x107
         </div>
@@ -185,7 +185,7 @@
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan<br>@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x103</p>
           Cell: (919) 412-0982
@@ -197,7 +197,7 @@
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.jpg">
       <div class="middle">
-        <div class="text">
+        <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:david@microtipsusa.com">david<br>@microtipsusa.com</a></p>
           Phone: (407) 273-0204 x110
         </div>
